--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
             </nav>
         </header>
         <main>
-            <aside class="LeftAside">Left aside</aside>
-            <section>section area</section>
-            <aside class="RightAside">Right aside</aside>
+            <aside class="left-aside">Left aside</aside>
+            <section class="mySection">section area</section>
+            <aside class="right-aside">Right aside</aside>
         </main>
-        <footer>Footer</footer>
+        <footer>
+            <h1>Hey! How are you?</h1>
+            <p>I am find</p>
+        </footer>
+
     </body>
 </html>
